# hr-ai-agent

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  chat_body.json  docker-compose.yml  install.md  install_local.md  pyproject.toml  requirements-rag-local.txt  requirements.txt
agents/: __init__.py  base.py  doc_structure.py  embeddings.py  extra_agent.py  hermes_host.py  hr_agent.py  orchestrator.py  rag_agent.py  rag_bridge_tool.py  self_improve.py  sql_agent.py  sql_bridge_tool.py
app/: __init__.py  api.py  logging_setup.py  main.py
config/: agent.yaml  hermes_config.yaml  logging.yaml
data/: employees.json
data/docs/: sample_faq.txt
hr_tools/: __init__.py  db_service.py  employee_tool.py  sql_tool.py
plugins/hr-employee/: __init__.py  plugin.yaml
plugins/sql-bridge/: __init__.py  plugin.yaml
prompts/: extra_agent_system.md  hermes_coordinator.md  rag_agent_system.md  sql_agent_system.md  system_prompt.md
scripts/: _chroma_probe.py  healthcheck.sh  smoke_sql_agent.py  start.sh  validate_data.py  validate_sql_guard.py
tools/: __init__.py  employee_service.py  employee_tool.py
