[build-system]
requires = ["setuptools>=68,<83"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agents"
version = "0.3.0"
description = "LangChain SQLAgent service (Langflow-compatible flow)"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "MIT" }
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.32.0,<1.0.0",
  "pydantic>=2.9.0,<3.0.0",
  "pydantic-settings>=2.6.0,<3.0.0",
  "httpx>=0.28.0,<1.0.0",
  "PyYAML>=6.0.2,<7.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "python-json-logger>=2.0.7,<4.0.0",
  "typing-extensions>=4.12.0,<5.0.0",
  "langchain-community>=0.3.0",
  "langchain-openai>=0.2.0",
  "langchain-core>=0.3.0",
  "langgraph>=0.2.0",
  "SQLAlchemy>=2.0.0,<3.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "psycopg2-binary>=2.9.9,<3.0.0",
]

[project.scripts]
ai-agents = "app.main:main"

[tool.setuptools]
include-package-data = true
packages = ["agents", "app"]

[tool.setuptools.package-dir]
agents = "agents"
app = "app"
